# lidar_ws

excavator_bringup/: CMakeLists.txt  README.zh.md  package.xml
excavator_bringup/config/: topic_contract.yaml
excavator_bringup/launch/: pipeline.launch.py  stage_01_lidar.launch.py  stage_02_urdf.launch.py  stage_03_filters.launch.py  stage_04_ground.launch.py  stage_05_height_map.launch.py  stage_06_dig_point.launch.py
excavator_crop/: CMakeLists.txt  package.xml
excavator_crop/config/: crop_box.yaml
excavator_crop/launch/: crop.launch.py
excavator_description/: CMakeLists.txt  README.md  package.xml
excavator_description/launch/: display.launch.py  rviz.launch.py  slider.launch.py
excavator_description/meshes/: arm_Link.STL  base_link.STL  boom_Link.STL  bucket_Link.STL  bucket_collision_convex.STL  swing_Link.STL
excavator_description/rviz/: waji.rviz
excavator_description/scripts/: bucket_tip_pose_publisher.py  generate_bucket_collision.py  waji_joint_controls.py  waji_joint_slider.py
excavator_description/urdf/: excavator.urdf
excavator_dig_point/: CMakeLists.txt  GRID_MAP_ENTRY_POINT_RULES.zh.md  package.xml  setup.cfg  setup.py
excavator_dig_point/config/: dig_point.yaml
excavator_dig_point/excavator_dig_point/: __init__.py  dig_point_scaffold.py
excavator_dig_point/launch/: dig_point.launch.py  dig_point_rviz.launch.py  full_pipeline.launch.py
excavator_dig_point/msg/: EntryPoint.msg
excavator_dig_point/rviz/: dig_point.rviz
excavator_dig_point/src/: dig_point_node.cpp
excavator_height_map/: CMakeLists.txt  package.xml
excavator_height_map/config/: height_map.yaml
excavator_height_map/launch/: full_pipeline.launch.py  height_map.launch.py  height_map_rviz.launch.py
excavator_height_map/rviz/: height_map.rviz
excavator_height_map/src/: height_map_node.cpp
excavator_patchwork/: CMakeLists.txt  package.xml
excavator_patchwork/config/: patchworkpp.yaml
excavator_patchwork/launch/: full_pipeline.launch.py  ground.launch.py  perception_filters.launch.py  segmentation_rviz.launch.py
excavator_patchwork/rviz/: segmentation.rviz
excavator_patchwork/src/: ground_segmentation_node.cpp
robot_body_filter/: CMakeLists.txt  package.xml
robot_body_filter/config/: excavator_body_filter.yaml
robot_body_filter/launch/: excavator_body_filter.launch.py  filters_only.launch.py
robot_body_filter/rviz/: body_filter.rviz
robot_body_filter/src/: robot_body_filter_node.cpp
rslidar_sdk/: CMakeLists.txt
rslidar_sdk/config/: config.yaml  config_localmap.yaml
rslidar_sdk/launch/: rslidar_airy_hard.launch  rslidar_airy_localmap.launch.py  rslidar_airy_soft.launch  start.launch
rslidar_sdk/rviz/: rviz.rviz  rviz2.rviz
rslidar_sdk/src/rs_driver/src/rs_driver/driver/: driver_param.hpp
rslidar_sdk/src/rs_driver/src/rs_driver/driver/decoder/: decoder_RSAIRY.hpp
rslidar_sdk/src/source/: source_driver.hpp
