<?xml version="1.0"?>
<package format="3">
  <name>excavator_bringup</name>
  <version>0.2.0</version>
  <description>Stage-by-stage launch files for the excavator LiDAR perception pipeline.</description>
  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>rslidar_sdk</exec_depend>
  <exec_depend>excavator_description</exec_depend>
  <exec_depend>robot_body_filter</exec_depend>
  <exec_depend>excavator_patchwork</exec_depend>
  <exec_depend>excavator_dig_point</exec_depend>
  <exec_depend>excavator_height_map</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
