<?xml version="1.0"?>
<package format="3">
  <name>excavator_crop</name>
  <version>0.1.0</version>
  <description>Adapter for the Autoware crop-box filter.</description>
  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>autoware_crop_box_filter</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

