<?xml version="1.0"?>
<package format="3">
  <name>excavator_dig_point</name>
  <version>0.1.0</version>
  <description>Digging-point selection boundary for height maps and excavator pose.</description>
  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>excavator_interfaces</exec_depend>
  <exec_depend>grid_map_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

