<?xml version="1.0"?>
<package format="3">
  <name>excavator_patchwork</name>
  <version>0.2.0</version>
  <description>Patchwork++ ground segmentation for the excavator perception pipeline.</description>
  <maintainer email="user@example.com">zhaoshuai</maintainer>
  <license>BSD-2-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_body_filter</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
